tests/dataset/tpc-ds/compiler/kotlin/q27.error
kotlinc: exit status 1
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/tmp/q27.kt:33:12: error: redeclaration: Store
data class Store(var s_store_sk: Int, var s_state: String)
           ^
/tmp/q27.kt:35:12: error: redeclaration: Item
data class Item(var i_item_sk: Int, var i_item_id: String)
           ^
/tmp/q27.kt:41:12: error: redeclaration: Item
data class Item(var i_item_sk: Int, var i_item_id: String)
           ^
/tmp/q27.kt:43:12: error: redeclaration: Store
data class Store(var s_store_sk: Int, var s_state: String)
           ^
